# nucleo-l433rc-p-playground

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
