[package]
authors = ["pdani"]
edition = "2018"
readme = "README.md"
name = "nucleo-l433rc-p-playground"
version = "0.1.0"

[dependencies]
#cortex-m = "0.7.0"
#cortex-m-rt = "0.7.0"
# cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "nightly", "integrated-timers"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "nightly"]

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "nightly", "stm32l433rc", "unstable-pac", "time-driver-any", "exti", "unstable-traits"]

[dependencies.stm32-metapac]
git = "https://github.com/embassy-rs/embassy"
features = ["stm32l433rc"]

[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy"

[dependencies.panic-probe]
version = "0.3"
features = ["print-defmt"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo-l433rc-p-playground"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
